Fix body shift

--- a/index.css
+++ b/index.css
@@ -1,11 +1,10 @@
 html {
-    height: inherit;
+    height: 100%;
+    box-sizing: border-box;
 }
 
-body,
-html {
-    margin: 0;
-    padding: 0;
+*, *::before, *::after {
+    box-sizing: inherit;
 }
 
 body {
@@ -13,6 +12,7 @@ body {
     background-size:cover;
     background-position:center;
     height: inherit;
+    margin: 0;
 }
 
 img {
@@ -35,8 +35,9 @@ main {
 }
 
 h1 {
+    margin-top: 0;
+    margin-bottom: 0;
     font-size: 70px;
-    margin-bottom: 0px;
 }
 
 .description {
